[gd_scene load_steps=18 format=3 uid="uid://j8l4ped64oul"]

[ext_resource type="Texture2D" uid="uid://cerru52g6siw7" path="res://assets/backgrounds/sky.png" id="2"]
[ext_resource type="Script" path="res://src/UI/Menu.gd" id="3"]
[ext_resource type="FontFile" uid="uid://dfe7qmt0o0a0u" path="res://assets/fonts/Pinewood-g2a3.ttf" id="3_4igkr"]
[ext_resource type="Texture2D" uid="uid://o3one3anvvmu" path="res://assets/ui/lemon.png" id="4"]
[ext_resource type="FontFile" uid="uid://dqqtp1qfq3mc2" path="res://assets/fonts/inter/Inter-Bold.ttf" id="4_h7gey"]
[ext_resource type="Texture2D" uid="uid://cdnaspubf06rh" path="res://assets/ui/stick.png" id="5"]
[ext_resource type="FontFile" uid="uid://cxau17ln6opup" path="res://assets/fonts/inter/Inter-Regular.ttf" id="5_g578c"]
[ext_resource type="StyleBox" uid="uid://cgnjbxvlxog02" path="res://assets/ui/button_hover.tres" id="7"]
[ext_resource type="StyleBox" uid="uid://b47lf7ekib1a" path="res://assets/ui/button_press.tres" id="8"]
[ext_resource type="StyleBox" uid="uid://d2cfvg8pq7fa6" path="res://assets/ui/button.tres" id="9"]
[ext_resource type="ButtonGroup" uid="uid://yjlwnvlajlei" path="res://src/UI/button_group_diff.tres" id="9_6puw0"]
[ext_resource type="Texture2D" uid="uid://u0cqrlt6ytkj" path="res://assets/ui/gramophone.png" id="11_jgpr0"]
[ext_resource type="Texture2D" uid="uid://7j1pt75ti284" path="res://assets/ui/acoustic-guitar.png" id="12_0tooa"]
[ext_resource type="ButtonGroup" uid="uid://bbn10a5d1eypp" path="res://src/UI/button_group_music.tres" id="12_nlndb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfl06"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(1, 1, 1, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4bdex"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(1, 1, 1, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 4
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rpwyv"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.160784, 0.360784, 0.211765, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.505882, 0.0588235, 0.290196, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 4
shadow_offset = Vector2(4, 4)

[node name="Menu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2")
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_4igkr")
theme_override_font_sizes/font_size = 60
text = "The adventures of
Rolph the tree"
horizontal_alignment = 1

[node name="DifficultyContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Difficulty" type="Label" parent="CenterContainer/VBoxContainer2/DifficultyContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_h7gey")
theme_override_font_sizes/font_size = 30
text = "Choose your difficulty"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2/DifficultyContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="Easy" type="Button" parent="CenterContainer/VBoxContainer2/DifficultyContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.160784, 0.160784, 0.160784, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_fonts/font = ExtResource("5_g578c")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("9")
theme_override_styles/hover = ExtResource("7")
theme_override_styles/pressed = ExtResource("8")
toggle_mode = true
button_pressed = true
button_group = ExtResource("9_6puw0")
text = "Easy Peasy Lemon Treesy"
icon = ExtResource("4")

[node name="Difficult" type="Button" parent="CenterContainer/VBoxContainer2/DifficultyContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.160784, 0.160784, 0.160784, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 10
theme_override_fonts/font = ExtResource("5_g578c")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("9")
theme_override_styles/hover = ExtResource("7")
theme_override_styles/pressed = ExtResource("8")
toggle_mode = true
button_group = ExtResource("9_6puw0")
text = "Trees And Stones May Break My Bones"
icon = ExtResource("5")

[node name="MusicContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Music" type="Label" parent="CenterContainer/VBoxContainer2/MusicContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_h7gey")
theme_override_font_sizes/font_size = 30
text = "Pick your jam"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="Legacy" type="Button" parent="CenterContainer/VBoxContainer2/MusicContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.160784, 0.160784, 0.160784, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_fonts/font = ExtResource("5_g578c")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("9")
theme_override_styles/hover = ExtResource("7")
theme_override_styles/pressed = ExtResource("8")
toggle_mode = true
button_group = ExtResource("12_nlndb")
text = "Old school winds rustling in the leaves"
icon = ExtResource("11_jgpr0")

[node name="Modern" type="Button" parent="CenterContainer/VBoxContainer2/MusicContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.160784, 0.160784, 0.160784, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 10
theme_override_fonts/font = ExtResource("5_g578c")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("9")
theme_override_styles/hover = ExtResource("7")
theme_override_styles/pressed = ExtResource("8")
toggle_mode = true
button_pressed = true
button_group = ExtResource("12_nlndb")
text = "The budding seeds of modern music "
icon = ExtResource("12_0tooa")

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.160784, 0.160784, 0.160784, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_fonts/font = ExtResource("4_h7gey")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_tfl06")
theme_override_styles/hover = SubResource("StyleBoxFlat_4bdex")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rpwyv")
text = "Start the game"

[connection signal="button_up" from="CenterContainer/VBoxContainer2/DifficultyContainer/VBoxContainer/Easy" to="." method="_on_Easy_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer2/DifficultyContainer/VBoxContainer/Difficult" to="." method="_on_Difficult_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer2/MusicContainer/VBoxContainer/Legacy" to="." method="_on_Legacy_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer2/MusicContainer/VBoxContainer/Modern" to="." method="_on_Modern_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer2/Start" to="." method="_on_Start_button_up"]
